# test-login

./: .gitignore  README.md
backend-axum/: Cargo.toml
backend-axum/src/: main.rs
backend-go/: go.mod  go.sum  main.go
backend-rocket/: Cargo.toml  Rocket.toml
backend-rocket/src/: main.rs
database/: README.md  go.mod  init.go  login.db  seed.sql
fe/: .env  package-lock.json  package.json
fe/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
fe/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
fe/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  registrasi.html  registrasi.rsc
fe/.next/server/chunks/: 760.js
fe/.next/server/pages/: 404.html  500.html
fe/.next/static/9I4vJzl-xp9RgpYv1zawo/: _buildManifest.js
fe/src/app/: page.tsx
fe/src/components/: login-form.tsx  register-form.tsx
frontend1/: package-lock.json  package.json
frontend1/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend1/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
(+77 files in other folders)
