[package]
name = "backend-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version ="0.7.4",features = ["multipart"]}
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
tower = "0.4.13"
