[package]
name = "backend-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1.0.197", features = ["derive"] }
bcrypt = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
rocket_cors = "0.6.0"
